refactor: 테스트 코드 BDD 스타일 통일
- when().thenReturn() → BDDMockito.given().willReturn()
- doNothing/doAnswer().when() → willDoNothing/willAnswer().given()
- assertEquals/assertThrows/assertNotNull 등 → AssertJ assertThat 통일
- 각 테스트 메서드에 // Given / When / Then 주석 블록 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>